# joubini

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.yml  db.json  joubini-config.yml  joubini.yml  requests.yml  tarpaulin-report.html
.github/workflows/: audit.yml  general.yml
examples/node-websocket/: client.js  index.html  joubini-config.yml  package.json  server.js
scripts/: ca.sh
src/: build.rs  cli.rs  error.rs  lib.rs  map.rs  parse.rs  proxy.rs  server.rs  settings.rs  startup.rs
tests/: config-without-options.yml  config.yml  e2e.rs  proxy.rs  server.rs  settings.rs
