[package]
name = "joubini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.13", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serial_test = "2.0.0"
serde_yaml = "0.9.30"
