[package]
name = "joubini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serial_test = "2.0.0"
serde_yaml = "0.9.30"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.2", features = ["full"] }
lazy_static = "1.4.0"
hyper-rustls = { version = "0.26.0", features = ["http2"] }
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"

[dev-dependencies]
actix-web = "4.4.1"
reqwest = { version = "0.11.23", features = ["json"] }
